WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57100
V8IDBKeyCustom.cpp does not compile with INDEXED_DATABASE disabled
https://bugs.webkit.org/show_bug.cgi?id=57100
Summary
V8IDBKeyCustom.cpp does not compile with INDEXED_DATABASE disabled
Steve Block
Reported
2011-03-25 06:25:34 PDT
The namespace and ENABLE guard are closed in the wrong order. See
http://trac.webkit.org/browser/trunk/Source/WebCore/bindings/v8/custom/V8IDBKeyCustom.cpp
Attachments
Patch
(1.80 KB, patch)
2011-03-28 09:52 PDT
,
Andrei Popescu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Popescu
Comment 1
2011-03-28 09:52:41 PDT
Created
attachment 87159
[details]
Patch
Steve Block
Comment 2
2011-03-28 10:06:53 PDT
Comment on
attachment 87159
[details]
Patch r=me
Andrei Popescu
Comment 3
2011-03-28 11:18:54 PDT
Committed
r82138
: <
http://trac.webkit.org/changeset/82138
> Steve, I can't close the bug for some reason. Do you mind if you do it? Thanks!
WebKit Review Bot
Comment 4
2011-03-28 12:33:20 PDT
http://trac.webkit.org/changeset/82138
might have broken SnowLeopard Intel Release (Tests)
Steve Block
Comment 5
2011-03-29 02:09:36 PDT
The bot seems happy now, and this is a compile-time only change, so I'm assuming this was fixed elsewhere.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug